style.css
@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css
);
@import url('https://fonts.googleapis.com/css2?family=Single+Day&display=swap');

:root {
  --main-color: #195D76;
}

*{
  box-sizing: border-box;
  font-size: 20px;
  font-family: 'Single Day';
}

body {
  margin: 0;
}

@keyframes spin {
  0% { transform: rotate(0deg); }
  100% { transform: rotate(360deg); }
}

@keyframes invisible {
  0%{
    opacity: 1;
  }
  30% {
    opacity: 0;
  }
  100% {
    opacity: 0%;
    z-index: -1;
  }
}

#wrapper {
  z-index: 1;
  position: fixed;
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color: var(--main-color);
  animation: invisible 0.4s linear forwards;
  animation-delay: 2s;
  gap: 20px;
}

#spinner {
  width: 80px;
  height: 80px;
  border: 15px solid white;
  border-top: 15px solid rgba(163, 151, 198, 1);
  border-radius: 50%;
  animation: spin 1s linear infinite;
}

#wrapper > div:nth-of-type(2) > span {
  font-size: 30px;
  font-weight: 700;
  color: white;
}

main {
  display: flex;
  flex-direction: column;
  align-items: center;
}

#arrow-bar {
  display: flex;
  position: fixed;
  flex-direction: column-reverse;
  gap: 10px;
  bottom: 130px;
  right: 30px;
}

.toggleSwitch {
  display: flex;
  width: 45px;
  height: 45px;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  border-radius: 50%;
  padding-top: 12px;
  padding-bottom: 12px;
  box-shadow: 0px 3px 5px black;
  cursor: pointer;
}

.arrow {
  width: 45px;
  height: 45px;
  border-radius: 50%;
  display: none;
  text-decoration: none;
  justify-content: center;
  align-items: center;
  box-shadow: 0px 3px 5px black;
}

.toggleSwitch > span {
  width: 70%;
  height: 5px;
  border-radius: 10px;
  background-color: black;
}


#toggle:checked ~ .arrow {
  display: flex;
  animation: visible 0.5s;
}

@keyframes visible {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

.arrow > i {
  color: black;
  font-size: 30px;
}

.arrow:nth-of-type(2) > i {
  padding-bottom:10px;
}


.line {
  height: 5px;
  width: 100%;
  background-color: var(--main-color);
}

header {
  padding: 40px;
}

header div{
  margin-top: 30px;
  display: flex;
  height: 130px;
  background-color: var(--main-color);
  align-items: center;
  justify-content: space-evenly;
  border-radius: 50px;
}

header > div > h1 {
  color: #ffffff;
  text-align: center;
  font-size: 2.5rem;
}

nav {
  position: sticky;
  background-color: white;
  top: 0;
  padding-top: 5px;
  border-bottom: 3px solid var(--main-color);
}

nav > ul{
  display: flex;
  justify-content: space-evenly;
  margin: 10px;
}



nav > ul > a> li {
  border-radius: 20px;
  font-size: 1.1rem;
  font-weight: 1000;
  list-style: none;
  color: var(--main-color);
  width: 170px;
  height: 50px;
  display: table-cell;
  vertical-align: middle;
  text-align: center;
}

nav > ul > a > li:hover{
  color: #ffffff;
  background-color: var(--main-color);
}


.fa-cutlery {
  font-size: 60px;
  color: #ffffff;
}

.fa-cutlery:hover {
  animation: spin 1.2s ease-in-out infinite;
}

table {
  border-collapse: collapse;
  border: 3px solid var(--main-color);
  width: 450px;
}

td, tr, th{
  border: 1px solid var(--main-color);
}

td {
  padding: 5px;
}

a:not(#company, .arrow) {
  text-decoration: none;
  color: white;
  font-size: 1.5rem;
  transition: transform .5s;
}

a:hover:not(#company, .arrow) {
  transform: scale(1.1);
  transition: transform .5s;
}

#company {
  text-decoration: none;
  color: var(--main-color);
}

li:not(nav > ul > a> li) {
  margin-bottom: 30px;
}

section {
  width: 50vw;
  display: flex;
  flex-direction: column;
  align-items: center;
}


#list1 .food-img {
  width: 400px;
  height: 300px;
  overflow: hidden;
  transition: height 0.2s linear;
}

#list1 .food-img:nth-of-type(1):hover {
  height: 480px;
  transition: height 0.2s linear;
}

section > article > h3 {
  color: white;
  background-color: var(--main-color);
  text-align: center;
  padding: 10px;
  padding-left: 15px;
  padding-right: 15px;
  border-radius: 25px;
  margin-bottom: 30px;
  margin-top: 80px;
  font-size: 1.5rem;
}

section > article:nth-of-type(1) > h3{
  transition: transform .3s;
}

section > article:nth-of-type(1) > h3:hover {
  transform: scale(1.1);
  transition: transform .3s;

}

article {
  margin-bottom: 70px;
}

aside {
  position: sticky;
  top: 100px;
}

aside > div {
  position: absolute;
  display: flex;
  flex-direction: column;
  margin-top: 100px;
  margin-left: 30px;
}

aside> div > img:nth-of-type(1) {
  margin-bottom: -4px;
}


footer h4 {
  margin-left: 10px;
}

strong {
  font-weight: 500;
}
@media (max-width: 1700px){
  aside > div {
    position: absolute;
    display: flex;
    flex-direction: column;
    margin-top: 100px;
    margin-left: 0px;
  }
}

@media (max-width: 1400px){
  aside {
    position:static;
    display: flex;
    justify-content: center;
  }

  aside > div {
    position: static;
    margin-top: 30px;
    margin-bottom: -40px;
  }

  aside > div > img {
    width: 300px;
  }
}

@media (max-width:713px) {
  .fa-cutlery {
    display: none;
  }

  header > div > h1 {
    font-size: 2rem;
  }

  nav {
    position: sticky;
    background-color: white;
    border-bottom: 3px solid var(--main-color);
  }

  nav > ul{
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-bottom: 10px;
  }

  nav > ul > a> li {
    height: 40px;
  }

  section > article > h3 {
    margin-top: 150px;
  }
}

